deployment/istio/templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: chatflow-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80       # 내부 Envoy가 수신할 HTTP 포트
        name: http
        protocol: HTTP
      hosts:
        - "flowchat.shop"
    - port:
        number: 443      # 내부 Envoy가 수신할 HTTPS 포트
        name: https
        protocol: HTTPS
      hosts:
        - "flowchat.shop"
      tls:
        mode: SIMPLE
        credentialName: flowchat-cert  # istio-system 네임스페이스의 TLS Secret
